Fix userAvatar z-index and add cases to hide offcanvas

--- a/src/Components/Landing/landing.css
+++ b/src/Components/Landing/landing.css
@@ -5,6 +5,7 @@
   background-position: center;
   background-size: cover;
   color: white;
+  z-index: 200;
 }
 
 .image-container img {
